      <effect-chain> <effect-chain-pos> <effect-instance>"
    - added LSCP command "REMOVE SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <chain-pos>"
    - added LSCP command "SET FX_SEND EFFECT <sampler_channel>
      <fx_send_id> <effect_chain> <chain_pos>"
    - added LSCP command "REMOVE FX_SEND EFFECT <sampler_channel> <fx_send_id>"

  * Bug fixes:
    - Fixed crash which may occur when MIDI key + transpose is out of range
    - minor valgrind fixes
    - fixed crash which occured when changing an already deployed sampler
      channel to a different engine type
    - fixed crash when deleting a sampler channel or changing engine
      type while an instrument load was in progress
    - bugfix: playing a note while changing the instrument could cause
      a crash, or give "Handing back unknown region" error messages
    - bugfix: calling SET VOICES (which Fantasia does on start and
      refresh) could cause instruments to be unloaded
    - Mac OS X: fixed name collision of enum in EffectControl and
      wrong name of destructor in AudioOutputDeviceCoreAudio.cpp
    - Mac OS X: fixed hanging threads
    - Windows: disabled the previous thread fix on non-Mac systems, as
      it caused hanging threads on Windows

Version 1.0.0 (31 July 2009)

  * packaging changes:
    - autoconf bugfix: the PKG_CONFIG variable wasn't initialized properly,
      causing e.g. the libgig test to fail when
      "./configure --disable-jack-driver" was used
      (patch by Alexis Ballier)
    - fixed compilation with gcc 4.3
    - fixes for building on OS X (thanks to Ebrahim Mayat for testing)
    - fixed configure so it detects x86_64 (#107)
    - fixes for building with newer MinGW versions
    - fix for building with bison 2.4 (#111)
    - fixed building with libgig installed in a non-standard directory
    - minor fix in configure for mmsystem.h detection on MinGW
    - Windows: look for editor plugins and Fantasia using base